--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,29 @@ __pycache__
 .venv/*
 !.venv/requirements.txt
 migrations
+
+
+
+# js/react stuff #
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
