--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "popcorn-155602_640.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "popcorn-155602_640.png",
       "type": "image/png",
       "sizes": "512x512"
     }
