--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "popcorn-155602_640.png",
+      "src": "popcorn-h192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
