--- a/app/frontend-app/movie-rater-web/package.json
+++ b/app/frontend-app/movie-rater-web/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vogelfenx.github.io/MovieRaterApi/",
   "name": "movie-rater-web",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +19,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
